RobotBuilder: basic project generation upgrade for new eclipse projects.
Also: fixed a race condition in MainFrame.getInstance().
Also: fixed the JavaExportTest to have better diagnostics
Also: fixed the generated tree in TestUtils to not be erroneous.
Also: tried (again) to fix the ANT compile invocation to include errors?
These should fix the Jenkins build failures.

Change-Id: I734a54e787b8a329a05b1c40eb35e04b818ed9f2