@@ -5,6 +5,8 @@
 package robotbuilder.exporters;
 
 import robotbuilder.robottree.RobotTree;
+import robotbuilder.data.RobotWalker;
+import robotbuilder.data.RobotComponent;
 import java.io.*;
 import org.junit.*;
 import static org.junit.Assert.*;
@@ -43,8 +45,15 @@ public class JavaExportTest {
     public void testJavaExport() throws IOException, InterruptedException {
         RobotTree tree = TestUtils.generateTestTree();
         tree.getRoot().setName("RobotBuilderTestProject");
-        tree.getRoot().getProperty("Java Project Directory").setValue(new File("test-resources/").getAbsolutePath());
+        tree.getRoot().getProperty("Eclipse Workspace").setValue(new File("test-resources/").getAbsolutePath());
         tree.getRoot().getProperty("Java Package").setValue("robotcode");
+        tree.walk(new RobotWalker() {
+            @Override
+            public void handleRobotComponent(RobotComponent self) { // Gives us better diagnostics when the robot tree isn't valid.
+                assertTrue("Component not valid: " + self + ": " + self.getErrorMessage(), self.isValid());
+            }
+        });
+        assertTrue("Robot tree is not valid.", tree.isRobotValid()); // Fails early instead of opening up a window to report failure.
         GenericExporter exporter = new GenericExporter("/export/java/");
         exporter.post_export_action = null;
         exporter.export(tree);
@@ -52,8 +61,10 @@ public class JavaExportTest {
         System.out.println("====================================================");
         Process p;
         try {
-            p = Runtime.getRuntime().exec("ant compile", null, new File("test-resources/RobotBuilderTestProject"));
+            System.out.println("Trying *NIX compile...");
+            p = Runtime.getRuntime().exec(new String[] {"sh", "-c", "ant compile", "2>&1"}, null, new File("test-resources/RobotBuilderTestProject"));
         } catch (IOException ex) { // Catch for windows
+            System.out.println("Trying Windows compile...");
             p = Runtime.getRuntime().exec("ant.bat compile", null, new File("test-resources/RobotBuilderTestProject"));
         }
         BufferedReader reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
